Defines proper Sonar plugin version